--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,6 +49,10 @@
             android:name=".views.WaitingOrdersActivity"
             android:label="@string/title_activity_waiting_orders" >
         </activity>
+        <activity
+            android:name=".views.OrderIcewerActivity"
+            android:label="@string/title_activity_orders_icewer" >
+        </activity>
     </application>
 
 </manifest>
