--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,6 +53,10 @@
             android:name=".views.OrderIcewerActivity"
             android:label="@string/title_activity_orders_icewer" >
         </activity>
+        <activity
+            android:name=".views.PriceListActivity"
+            android:label="@string/title_activity_price_list" >
+        </activity>
     </application>
 
 </manifest>
