Modificato timeout api e version code (0.1)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="it.aeg2000srl.aeron"
-    android:versionCode="1"
-    android:versionName="0.9" >
+    package="it.aeg2000srl.aeron">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
