Gestione Ordini in attesa

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="it.aeg2000srl.aeron">
+    package="it.aeg2000srl.aeron" >
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -71,6 +71,10 @@
             android:name=".views.LoginActivity"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/title_activity_login" >
+        </activity>
+        <activity
+            android:name=".views.WaitingOrdersAllActivity"
+            android:label="@string/title_activity_waiting_orders_all" >
         </activity>
     </application>
 
