--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         </activity>
         <activity
             android:name=".views.OrderActivity"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_order" >
         </activity>
         <activity
