--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,16 @@
 apply plugin: 'com.android.application'
 
 android {
+    signingConfigs {
+        aeg2000 {
+            keyAlias 'aeg2000'
+            keyPassword 't1z1@n0'
+            storeFile file('H:/aeg2000/APKs/keystore.jks')
+            storePassword 't1z1@n0'
+        }
+    }
     compileSdkVersion 23
     buildToolsVersion "23.0.1"
-
     defaultConfig {
         applicationId "it.aeg2000srl.aeron"
         minSdkVersion 21
@@ -20,7 +27,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:23.0.1'
     compile 'com.github.satyan:sugar:1.3.1'
     compile 'com.android.support:design:23.0.1'
